# ChangeLog for media-gfx/fbida
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/fbida/ChangeLog,v 1.41 2008/01/15 15:32:07 spock Exp $

  15 Jan 2008; Michał Januszewski <spock@gentoo.org> fbida-2.06.ebuild:
  Fix bug #205850.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; fbida-2.03-r4.ebuild,
  fbida-2.05.ebuild, fbida-2.06.ebuild:
  Drop virtual/x11 references.

  25 Jun 2007; Raúl Porcel <armin76@gentoo.org> fbida-2.05.ebuild:
  alpha stable wrt #177324

  07 May 2007; Daniel Gryniewicz <dang@gentoo.org> fbida-2.05.ebuild:
  Marked stable on amd64 for bug #177324

  07 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> fbida-2.05.ebuild:
  Stable on sparc wrt #177324

  07 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> fbida-2.05.ebuild:
  ppc stable, bug #177324

  06 May 2007; Andrej Kacian <ticho@gentoo.org> fbida-2.05.ebuild:
  Stable on x86, bug #177324.

  06 May 2007; Markus Rothe <corsair@gentoo.org> fbida-2.05.ebuild:
  Stable on ppc64; bug #177324

  06 May 2007; Jeroen Roovers <jer@gentoo.org> fbida-2.05.ebuild:
  Stable for HPPA (bug #177324).

  06 May 2007; Michał Januszewski <spock@gentoo.org> fbida-2.05.ebuild,
  fbida-2.06.ebuild:
  Install a .desktop file for ida (bug #175574).

*fbida-2.06 (06 May 2007)

  06 May 2007; Michał Januszewski <spock@gentoo.org> +fbida-2.06.ebuild:
  Version bump (bug #177055).

  22 Apr 2007; Michał Januszewski <spock@gentoo.org> fbida-2.03-r4.ebuild,
  fbida-2.05.ebuild:
  Let the package manager decide whether the binaries should be stripped (bug
  #175572).

  11 Apr 2007; Peter Weller <welp@gentoo.org> fbida-2.03-r4.ebuild:
  Stable on amd64 wrt bug 174094

  27 Mar 2007; Michał Januszewski <spock@gentoo.org>
  +files/fbida-2.05-asmpage-fix.patch, fbida-2.05.ebuild:
  Remove unused #include in fbtools.c (bug #171927).

  04 Mar 2007; Michał Januszewski <spock@gentoo.org> fbida-2.03-r4.ebuild,
  fbida-2.05.ebuild: