@@ -1,10 +1,21 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX fbida-2.03-fbgs.patch 371 RMD160 942f4eed3fcde7d98776d289427adc461d43aad2 SHA1 f51e6d1b36ae888f7151919bfd7b829541c00d2a SHA256 d55ce254f37ad104a17c49d3d40d92726b3f9131e5221795e10660edcfe50820
 AUX fbida-2.05-asmpage-fix.patch 377 RMD160 b4419c260a94fa12a596badaec9af0e1c647ced7 SHA1 1a40e35781dc6b385aea7175a4239345f2cdf2a2 SHA256 d3540536a84e3bceb4c82ce0835fcf62ee6bc36a94ef813c7f603ea908f5b4c3
+AUX ida.png 11458 RMD160 3ebfaba3ae9219c3c840f5aa2a4be04065f28f49 SHA1 97da34d4e72ed004280d8c8416b2be5efb666c66 SHA256 57a21e900eb13c1a2b2d25e1dd78693e4fcf9fb86eef1138bf750f8a45819993
 DIST fbida-2.03.tar.gz 205955 RMD160 f2ee360dd7f86c69c9bf482d79ec921dfdf3c65a SHA1 1c42169f22c666d1de522c028deb8559c932732a SHA256 457ab582926337924b4de1b6d022193e6995340f838915f3d44c332f2bde54e6
 DIST fbida-2.05.tar.gz 205879 RMD160 02ea326853a7f57ea7dd1cff26b9693522059ef0 SHA1 27dc4b8d46068ddfab1b64dd88b90a11e7ad2c14 SHA256 8ef43996b4b9315652ef690e5b1f670ba585ccfb0a1dbb59a44ff7af0aa2787c
 DIST fbida-2.06.tar.gz 207707 RMD160 71cee41934a15c7f1e633743ba5e7499610b8377 SHA1 7be6b28555b8645bf506b3f2c070244a8b9710cb SHA256 6d0d2a553940fb36ab673332f4552ba6943852d795af9618138322178fe1aeac
 EBUILD fbida-2.03-r4.ebuild 2181 RMD160 a63de3c0c3050e605e95ab68d3b1be80dd91776e SHA1 bd5954e03113909a128988276341fac9ba21db1b SHA256 7c0d30a9edbeb54e27a6d59137f4b0331c7a3d321db101bae10a4a6970e5cb12
 EBUILD fbida-2.05.ebuild 2380 RMD160 e0a4bd2f7972298139e2f07bbe4e3c778e7e5e0d SHA1 d95be145dc96a5b16e3abaaf27126c1c56d0c9fc SHA256 cc87b40248b8aee0578dd6feead35e349d831fe32dad361f821e9d7a08e12745
-EBUILD fbida-2.06.ebuild 2387 RMD160 7976154dd740de458cfaff2e78a6e5281db6f3b2 SHA1 62e6f053da8020463538a46b9e61a01333446c85 SHA256 87b90ecc57da24a19ba6178cd9f41945deb131f15b85bebf2fd26881f6a64a5c
-MISC ChangeLog 5546 RMD160 5d7cbb27c1fc38ece496518799d731507644ba39 SHA1 b86b87c29a1afeaba1f83a1a5f3234145f5338ca SHA256 d017bdc569e6b939d8d6599497655b2a18f454ec0217931a7bc91b4f249e566a
+EBUILD fbida-2.06.ebuild 2403 RMD160 607ee6eec754503e020ab11baca5887f3f36d45e SHA1 d64c759a298bfb63279ba90a18b15b978ee90fcf SHA256 69deed222e7ddad675c25d6a91f12e5891a9dee509c1e206287568a7443746d5
+MISC ChangeLog 5657 RMD160 3b027d16752b8281f9877a298850edf66be38b14 SHA1 4102013c5582f4bdd789cd7aeeb9c205c16cc8b9 SHA256 41ad417510f8670a3334fe1ec629381aa44e165e2e601fa3fc116a4be376d6c4
 MISC metadata.xml 221 RMD160 90fef1dff5d0b3945073e90bb7ffec583ff1bbe8 SHA1 f35d1b1858e1223f4dc7b2c03fdf17e50091f1ca SHA256 fd573abb9cf89f320d00d1c107a25a46a5dfba633087d4179d0b8bd9aa539c8e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkf6SaYACgkQchej4aZK9/exNwCffU8VkZCzyBq1DiO7tv7WvBk1
+eckAn0PtCsJTgudClvO7pv3nbsLFMX38
+=YJrU
+-----END PGP SIGNATURE-----
