@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/fbida
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/fbida/ChangeLog,v 1.41 2008/01/15 15:32:07 spock Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/fbida/ChangeLog,v 1.42 2008/04/07 16:19:48 spock Exp $
+
+  07 Apr 2008; Michał Januszewski <spock@gentoo.org> +files/ida.png,
+  fbida-2.06.ebuild:
+  Fix bug #207812.
 
   15 Jan 2008; Michał Januszewski <spock@gentoo.org> fbida-2.06.ebuild:
   Fix bug #205850.
